# fallacylens-groq

./: .gitignore  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
_backup_fallacylens/: __init__.py  detector.py
api/: main.py
demo/: app.py
fallacylens/: models.py  taxonomy.py
